# react_fast_post

./: README.md  package-lock.json  quests.db
backend/: database.db  main.py  pyproject.toml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
docs/: dependencies.md
frontend/src/components/: LoadingStatus.jsx  StoryLoader.jsx  ThemeInput.jsx
practice/: .env.local  SQLAlchemy_ORM.py  advanced_python_patterns.py  classes_and_type_hints.py  environment_configuration.py  integration_exercise.py  langchain_structured_outputs.py  prompts.py  pydantic_validation.py
